--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -121,14 +121,13 @@ ul, ol, li, a {
 
 
 /*Ahora vamos a editar el css para formato celu*/
-@media (max-width: 420px) {
+@media(max-width: 420px) {
     .navLista {
         padding: 0px;
         width: fit-content;
     }
     .lista{
         flex-direction: column;
-        width: ;
     }
     .listita {
         display: flex;
@@ -139,4 +138,4 @@ ul, ol, li, a {
         align-items: center;
         justify-content: center;
         margin: 2px;
-}
+    }}
