--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -123,22 +123,47 @@ ul, ol, li, a {
 /*Ahora vamos a editar el css para formato celu*/
 @media(max-width: 420px) {
    body{
-    padding: 0px;
+    padding: 2%;
    }
    .navLista {
-        padding: 0px;
-        width: fit-content;
+        padding: 0%;
+        margin: 0%;
+        width: 100%;
     }
     .lista{
         flex-direction: column;
     }
     .listita {
         display: flex;
-        padding: 20px;
+        padding: 5%;
         background-color: #444;
         height: auto;
-        width: 350px;
+        width: 100%;
         align-items: center;
         justify-content: center;
         margin: 2px;
-    }}
+    }
+    .banner{
+        width: fit-content;
+        padding: 0px;
+    }
+    .tarjeta-sec{
+        padding: 0px;
+        flex-direction: column;
+        width: fit-content;
+    }
+    .tarjeta{
+        width: fit-content;
+    }
+    .footerUl{
+        flex-direction: column;
+        background-color: transparent;
+    }
+    .item-footer{
+        padding: 0px;
+        background-color: #444;
+    }
+    .linea{
+        display: none;
+    }
+}
