--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -131,16 +131,17 @@ ul, ol, li, a {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    border-radius: 1%;
 }
 
 form{
-        display: flex;
+    display: flex;
     flex-direction: column;
     width: 30%;
     padding: 5%;
     background-color: #44444454;
+    border-radius: 1%;
 }
+
 .recordar{
     display: flex;
     align-items: flex-end;
@@ -154,6 +155,11 @@ form{
     margin: 2%;
     width: 100%;
 }
+.contenedor-opciones{
+    flex-direction: row;
+    display: flex;
+}
+
 button{
     background-color:rgba(0, 102, 255, 0.692) ;
     color: white;
@@ -167,6 +173,7 @@ button{
     justify-content: center;
     padding: 10%;
 }
+
 /*Ahora vamos a editar el css para formato celu*/
 @media(max-width: 420px) {
    body{
