--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -167,11 +167,21 @@ button{
     width: 60%;
     border-radius: 10%;
     border: rgba(0, 102, 255, 0.692);
+    margin: 2%;
 }
 .button{
     display: flex;
     justify-content: center;
     padding: 10%;
+}
+.botones{
+    display: flex;
+}
+.botones-chicos{
+    display: flex;
+    size: 1%;
+    width: 10%;
+    justify-content: ;
 }
 
 /*Ahora vamos a editar el css para formato celu*/
